# quant-template

./: .gitignore  .pre-commit-config.yaml  .slug  CLAUDE.md  README.md  SUMMARY.md  THESIS.md  install.sh  pyproject.toml
.claude/: settings.json
.claude/rules/: code-style.md  communication.md  review.md  security.md
killtest/: __init__.py  __main__.py  config.py  pipeline.py  signal.py
qf/: __init__.py  backtest.py  controls.py  costs.py  data_loader.py  datasource.py  forecast.py  logging_config.py  stats.py
tests/: conftest.py  test_controls.py  test_costs.py  test_datasource.py  test_forecast.py  test_harness_synthetic.py  test_no_lookahead.py
